:art: fix spacing and transitions to be consistent

--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -64,7 +64,7 @@ body {
   line-height: 1.5;
   max-width: 40rem;
   margin: 0 auto;
-  padding: 0.5rem;
+  padding: .5rem;
 }
 
 .sideBySide {
@@ -111,7 +111,7 @@ main section {
   align-items: center;
   flex: 1;
   padding: 1rem;
-  transition: background-color 0.5s ease;
+  transition: background-color .5s ease;
 }
 
 #result.safe::before {
@@ -135,11 +135,11 @@ main section {
   font-weight: bold;
   font-size: 2rem;
   text-align: center;
-  margin: 0 1rem 0 0;
+  margin-right: 1rem;
 }
 
 #disclaimer {
-  padding: 0 0 20rem;
+  padding-bottom: 20rem;
   font-size: .75rem;
 }
 
@@ -187,7 +187,7 @@ button {
 
 select {
   border: thin solid #1b3e58;
-  margin: 0 0 0.5rem;
+  margin-bottom: .5rem;
   padding: .5rem .25rem;
 }
 
@@ -210,13 +210,13 @@ select:disabled {
 #submit {
   background: #1b3e58;
   color: #fff;
-  padding: 0.5rem 1rem;
+  padding: .5rem 1rem;
   cursor: pointer;
 }
 
 #depthOutput {
   flex: 1;
-  margin: 0 0.5rem 0 0;
+  margin-right: .5rem;
 }
 
 .radioLabel {
@@ -231,6 +231,7 @@ button,
 
 input[type="radio"] {
   display: inline;
+  margin-right:.5rem;
 }
 
 input[type="range"] {
@@ -247,7 +248,6 @@ input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 1rem;
   cursor: pointer;
-  transition: 0.2s;
   background: #1b3e58;
   border-radius: 3rem;
 }
@@ -267,7 +267,6 @@ input[type="range"]::-moz-range-track {
   width: 100%;
   height: 1rem;
   cursor: pointer;
-  transition: 0.2s;
   background: #1b3e58;
   border-radius: 3rem;
 }
@@ -286,7 +285,6 @@ input[type="range"]::-ms-track {
   width: 100%;
   height: 1rem;
   cursor: pointer;
-  transition: 0.2s;
   background: transparent;
   border-color: transparent;
   border-width: 2rem 0;
@@ -332,7 +330,7 @@ input[type="range"]::-ms-thumb {
 #chevron {
   width: 5rem;
   height: 5rem;
-  transition: transform 0.5s ease-out;
+  transition: transform .5s ease-out;
 }
 
 #chevronContainer {
